--- a/OneDrive/Desktop/Project UAS Katherin Monica 422023011/awardsUAS.html
+++ b/OneDrive/Desktop/Project UAS Katherin Monica 422023011/awardsUAS.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="awards14112023.css">
+	<link rel="stylesheet" type="text/css" href="awardsUAS.css">
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <title>Bootstrap Example</title>
+    <title>TWICE & ONCE</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
@@ -19,15 +19,15 @@
 		<a class="icon dekstop" href="index.html">ONCE <span> WORLD </span></a>
 		<a class="icon mobile" href="index.html">O.W</a>
 		<ul class="navbar">
-			<li class="dekstop"><a href="login14112023.html"> Home</a> </li>
-			<li class="dekstop"><a href="awards14112023.html"> Awards</a></li>
-			<li class="dekstop"><a href="photos14112023.html"> Photos</a></li>
-			<li class="dekstop"><a href="information14112023.html">Information</a></li>
+			<li class="dekstop"><a href="loginUAS.html"> Home</a> </li>
+			<li class="dekstop"><a href="awardsUAS.html"> Awards</a></li>
+			<li class="dekstop"><a href="photosUAS.html"> Photos</a></li>
+			<li class="dekstop"><a href="informationUAS.html">Information</a></li>
 		</ul>
 
 		<div class="follow">
 			<a class="dekstop" href="https://www.instagram.com/twicetagram/">Follow</a>
-			<a class="mobile" href="photos14112023.html">Photos</a>
+			<a class="mobile" href="photosUAS.html">Photos</a>
 			<a class="dekstop.mobile" href="https://twitter.com/JYPETWICE"><i class='bx bxl-twitter'></i></a>
 			<a class="dekstop.mobile" href="https://www.tiktok.com/@twice_tiktok_official"><i class='bx bxl-tiktok'></i></a>
 		</div>
