--- a/OneDrive/Desktop/Project UAS Katherin Monica 422023011/index.html
+++ b/OneDrive/Desktop/Project UAS Katherin Monica 422023011/index.html
@@ -3,18 +3,23 @@
 <head>
 	<title>TWICE & ONCE</title>
 	<link rel="stylesheet" type="text/css" href="pendaftaranUAS.css">
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 
 	<center>
-	<h1 class="dekstop.tablet"> Welcome to ONCE World</h1>
-		<h1 class="dekstop.tablet">트와이스</h1>
-		<h2 class="dekstop.tablet"> Pendaftaran Masuk Once World</h2>
-		<p class="dekstop.tablet"> HII :)  ONCE ALL THE WORLD!!!! <br> 
-		Wellcome to this Website, you guys can LOGIN first and HERE WE GOO!!!<br>
-		<br> <br> </p>
+	<h3 class="dekstop.tablet" style="color:black; padding-top: 40px;"> Welcome to ONCE World <br> 트와이스 <br> Pendaftaran Masuk Once World</h3>
+		<p class="dekstop.tablet" style="color:#9C89B8;"> if you don't want to register click here, 
+			<br>if you want register just scroll down. Thank YOU!!!!<br>
+		<br> </p>
 
-		<h2 class="dekstop tablet"> if you don't want to register click here, if you want register just scroll down. Thank YOU!!!!</h2>
+		<h3 class="dekstop.tablet"></h3>
+		<div>
+			  <a href="loginUAS.html" class="btn btn-outline-primary">Login Here</a>
+			 </div>
 <center>
 	<div id="card" class="dekstop.tablet">
     	<div id="card-content" class="dekstop .tablet">
@@ -58,27 +63,25 @@
          <center>
 			<div>
 				<input type="submit" value="Daftar" class="tombol" >
-			</div>
-			<div>
-			 <a href="login14112023.html" id="signup">login here</a>
-			 </div>
+			</div>	
 		</form>
-		<center>
-
-			
+		<center>		
 <br>
 <br>
 <br>
 <br>
-<p1 class="dekstop.tablet"> Sugar, spice and everything nice!<br>
+<br>
+<br>
+<br>
+<footer style="color: #6D597A"> Sugar, spice and everything nice!<br>
 Great and fast translations combined with witty adlibs! 
-<br> We can’t help but smile extra.</p1> </div>
+<br> We can’t help but smile extra.</footer> </div>
 <hr>
 </center>
 	
 </body>
 <script src=" jquery-3.7.1.min.js"> </script>
-<script type="text/javascript" src="pendaftaran14112023.js">
+<script type="text/javascript" src="pendaftaranUAS.js">
 	
 </script>
 </html>
