--- a/OneDrive/Desktop/Project UAS Katherin Monica 422023011/informationUAS.html
+++ b/OneDrive/Desktop/Project UAS Katherin Monica 422023011/informationUAS.html
@@ -4,11 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="information14112023.css">
+	<link rel="stylesheet" type="text/css" href="informationUAS.css">
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
@@ -18,10 +17,10 @@
 		<a class="icon dekstop" href="index.html">ONCE <span> WORLD </span></a>
 		<a class="icon mobile" href="index.html">O.W</a>
 		<ul class="navbar">
-			<li class="dekstop"><a href="login14112023.html"> Home</a> </li>
-			<li class="dekstop"><a href="awards14112023.html"> Awards</a></li>
-			<li class="dekstop"><a href="photos14112023.html"> Photos</a></li>
-			<li class="dekstop"><a href="information14112023.html">Information</a></li>
+			<li class="dekstop"><a href="loginUAS.html"> Home</a> </li>
+			<li class="dekstop"><a href="awardsUAS.html"> Awards</a></li>
+			<li class="dekstop"><a href="photosUAS.html"> Photos</a></li>
+			<li class="dekstop"><a href="informationUAS.html">Information</a></li>
 		</ul>
 
 		<div class="follow">
