--- a/OneDrive/Desktop/Project UAS Katherin Monica 422023011/photosUAS.html
+++ b/OneDrive/Desktop/Project UAS Katherin Monica 422023011/photosUAS.html
@@ -4,8 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="photos14112023.css">
-	<link rel="stylesheet" type="text/css" href="photos14112023.scss">
+	<link rel="stylesheet" type="text/css" href="photosUAS.css">
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -17,15 +16,15 @@
 	<header class="dekstop">
 		<a class="icon dekstop" href="index.html">ONCE <span> WORLD </span></a>
 		<ul class="navbar">
-			<li class="dekstop"><a href="login14112023.html"> Home</a> </li>
-			<li class="dekstop"><a href="awards14112023.html"> Awards</a></li>
-			<li class="dekstop"><a href="photos14112023.html"> Photos</a></li>
-			<li class="dekstop"><a href="information14112023.html">Information</a></li>
+			<li class="dekstop"><a href="loginUAS.html"> Home</a> </li>
+			<li class="dekstop"><a href="awardsUAS.html"> Awards</a></li>
+			<li class="dekstop"><a href="photosUAS.html"> Photos</a></li>
+			<li class="dekstop"><a href="informationUAS.html">Information</a></li>
 		</ul>
 
 		<div class="follow">
 			<a class="dekstop" href="https://www.instagram.com/twicetagram/">Follow</a>
-			<a class="mobile" href="information14112023.html">Photos</a>
+			<a class="mobile" href="informationUAS.html">Photos</a>
 			<a class="dekstop.mobile" href="https://twitter.com/JYPETWICE"><i class='bx bxl-twitter'></i></a>
 			<a class="dekstop.mobile" href="https://www.tiktok.com/@twice_tiktok_official"><i class='bx bxl-tiktok'></i></a>
 		</div>
